# MatchingEngine

./: CMakeLists.txt  README.md
include/: MatchingEngine.h  MessageTypes.h  OrderBook.h  ThreadSafeQueue.h
src/: MatchingEngine.cpp  OrderBook.cpp  main.cpp
